[gd_scene load_steps=2 format=3 uid="uid://bcimr0tmqsfn5"]

[ext_resource type="Script" uid="uid://spoxnpa8236s" path="res://scenes/ui/menu/pausemenu/pause_menu.gd" id="1_uxiq5"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uxiq5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer" groups=["Buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Resume"

[node name="QuitToMainMenuButton" type="Button" parent="CenterContainer/VBoxContainer" groups=["Buttons"]]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "Back to Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitToMainMenuButton" to="." method="_on_quit_to_main_menu_button_pressed"]
